--- a/index.html
+++ b/index.html
@@ -6,33 +6,70 @@
     <meta content='noodp' name='robots'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link href="http://teabass.com/posts.atom" rel="alternate" title="Posts feed" type="application/atom+xml" />
-    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700,400' rel='stylesheet' type='text/css'>
-    <style type="text/css" media="screen">
-      body{
-        margin:0;
-        background:url(http://subtlepatterns.com/patterns/graphy.png);
-        font-family: 'Helvetica Neue', sans-serif;
-      }
-      h1{
-        text-align:center;
-        font-size:20em;
-        line-height:400px;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
-      }
-      a{
-        -webkit-transition: all 0.1s linear;
-        color:#0080FF;
-        text-decoration:none;
-        opacity:0.5;
-      }
-      a:hover{
-        opacity:0.7;
-        font-size:105%;
-      }
-    </style>
+    <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1><a href='http://github.com/andrew'>Hi!</a></h1>
+    <div id="container">
+      <div class='face'></div>
+      <h1>Andrew Nesbitt</h1>
+      <p>Andrew is a passionate full stack developer. He spends most of his days programming in Ruby, playing with Node.js, contributing to open source projects and organising local developer user groups. He also aspires to one day take over the world with a fleet of JavaScript powered quadcopters.</p>
+      <section id='code'>
+        <h2>Code</h2>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/split'>Split</a></h3>
+            <p>The Rack Based AB testing framework</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/node-sass'>node-sass</a></h3>
+            <p>Node.js bindings to libsass</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/24pullrequests'>24pullrequests</a></h3>
+            <p>Giving back little gifts of code for Christmas</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/brewdler'>Brewdler</a></h3>
+            <p>Bundler for non-ruby dependencies from homebrew</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/hipsternews'>HipsterNews</a></h3>
+            <p>Rubymotion Hacker News reader</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3><a href='https://github.com/andrew/lanyrd'>Lanyrd</a></h3>
+            <p>An unofficial wrapper around the Lanyrd API</p>
+          </li>
+        </ul>
+      </section>
+      <section id='events'>
+        <h2>Events</h2>
+        <ul>
+          <li>
+            <h3><a href='http://lnug.org/'>LNUG</a></h3>
+            <p>The London Node.js User Group</p>
+          </li>
+          <li>
+            <h3><a href='http://nodecopter.com/'>Nodecopter</a></h3>
+            <p>Bringing flying robot hackdays to the UK</p>
+          </li>
+          <li>
+            <h3><a href='http://railsgirls.com/'>RailsGirls</a></h3>
+            <p>Helping teach women programming and rails around the UK</p>
+          </li>
+        </ul>
+      </section>
+
+    </div>
   </body>
 </html>
