Footed the bill

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
           </li>
         </ul>
       </section>
-
+      <footer>
+        Hosted on <a href='http://pages.github.com/'>GitHub Pages</a>
+      </footer>
     </div>
   </body>
 </html>
