--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
           </li>
         </ul>
       </section>
+      <section id='talks'>
+        <h2>Talks</h2>
+        <ul>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/nodecopter'>Node.js + Quadcopters, what could go wrong?</a></h3>
+            <p>Presented at Geeky in 2013</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h3>
+            <p>Presented at the London, Bristol and Cardiff Ruby User Groups about Rubymotion in 2013</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/integrating-node-dot-js'>Integrating Node.js into an existing stack</a></h3>
+            <p>Presented at the Italian Node.js Conference in 2012</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/em-vs-node'>Event Machine vs Node.js</a></h3>
+            <p>Presented at Ruby Manor in 2011</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/b-testing-everything-with-split'>A/B Testing everything with Split</a></h3>
+            <p>Presented at Arrrrcamp in 2011</p>
+          </li>
+        </ul>
+      </section>
       <footer>
         Hosted on <a href='http://pages.github.com/'>GitHub Pages</a>
       </footer>
