--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <a href="mailto:andrewnez@gmail.com?subject=I'd like to hire you"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="hire-me@2x.png" alt="Hire Me"></a>
+    <a href="mailto:andrewnez@gmail.com?subject=I'd like to hire you" class='hire-me'><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="hire-me@2x.png" alt="Hire Me"></a>
     <div id="container">
       <div class='face'></div>
+      <h1>Andrew Nesbitt</h1>
       <div class='social'>
         <iframe src="http://ghbtns.com/github-btn.html?user=andrew&amp;type=follow&amp;count=false" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
         <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.1363148939.html#_=1365113007323&amp;id=twitter-widget-4&amp;lang=en&amp;preview=true&amp;screen_name=teabass&amp;show_count=false&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button twitter-follow-button" style="width: 113px; height: 20px;" title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
       </div>
-      <h1>Andrew Nesbitt</h1>
-      <p>Andrew is a passionate full stack developer. He spends most of his days programming in Ruby, playing with Node.js, contributing to open source projects and organising local developer user groups. He also aspires to one day take over the world with a fleet of JavaScript powered quadcopters.</p>
+      
+      <p class='about'>Andrew is a passionate full stack developer. He spends most of his days programming in Ruby, playing with Node.js, contributing to open source projects and organising local developer user groups. He also aspires to one day take over the world with a fleet of JavaScript powered quadcopters.</p>
       <section id='code'>
         <h2>Code</h2>
         <ul>
