Added videos section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,31 @@
           </li>
         </ul>
       </section>
+      <section id='videos'>
+        <h2>Videos</h2>
+        <ul>
+          <li>
+            <h3><a href='http://vimeo.com/52547197'>Integrating Node.js into your existing technology stack.</a></h3>
+            <p>Recorded at London Node User Group in 2012</p>
+          </li>
+          <li>
+            <h3><a href='http://vimeo.com/41141012'>Using Node.js and Ruby on Rails for uber productivity</a></h3>
+            <p>Recorded at London Node User Group in 2012</p>
+          </li>
+          <li>
+            <h3><a href='http://vimeo.com/32617520'>Form Analytics With inForm</a></h3>
+            <p>Recorded at HN London in 2011</p>
+          </li>
+          <li>
+            <h3><a href='http://www.youtube.com/watch?v=U7dbQ4cIe34'>Event Machine vs Node.js</a></h3>
+            <p>Recorded at Ruby Manor in 2011</p>
+          </li>
+          <li>
+            <h3><a href='http://vimeo.com/30586648'>A/B Testing everything with Split</a></h3>
+            <p>Recorded at Arrrrcamp in 2011</p>
+          </li>
+        </ul>
+      </section>
       <footer>
         Hosted on <a href='http://pages.github.com/'>GitHub Pages</a>
       </footer>
