Renamed talks section to presentations

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           </li>
         </ul>
       </section>
-      <section id='talks'>
-        <h2>Talks</h2>
+      <section id='presentations'>
+        <h2>Presentations</h2>
         <ul>
           <li>
             <h3><a href='https://speakerdeck.com/andrew/nodecopter'>Node.js + Quadcopters, what could go wrong?</a></h3>
