Changed nodecopter talk slides link

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <h2>Presentations</h2>
         <ul>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/nodecopter'>Node.js + Quadcopters, what could go wrong?</a></h3>
-            <p>Presented at Geeky in 2013</p>
+            <h3><a href='https://speakerdeck.com/andrew/nodecopter-cheltenham-geek-nights'>Node.js + Quadcopters, what could go wrong?</a></h3>
+            <p>Presented at Cheltenham Geek Nights in 2013</p>
           </li>
           <li>
             <h3><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h3>
