Added Bristol IT Mega Meet to presentations

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/the-meetup-organisers-field-guide'>The Meetup Organisers Field Guide</a></h3>
+            <p>Presented at Bristol IT Mega Meet in 2013</p>
+          </li>
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/nodecopter-cheltenham-geek-nights'>Node.js + Quadcopters, what could go wrong?</a></h3>
             <p>Presented at Cheltenham Geek Nights in 2013</p>
           </li>
