Added Bath Ruby to events

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             <h3><a href='http://railsgirls.com/'>RailsGirls</a></h3>
             <p>Helping teach women programming and rails around the UK</p>
           </li>
+          <li>
+            <h3><a href='http://www.meetup.com/bathruby/'>Bath Ruby User Group</a></h3>
+            <p>Informal monthly meetups for Rubyists in and around Bath</p>
+          </li>
         </ul>
       </section>
       <section id='presentations'>
