--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         <h2>Events</h2>
         <ul>
           <li>
+            <h3><a href='http://greatbritishnodeconf.co.uk/'>The Great British Node Conference</a></h3>
+            <p>A single day, community focused Node.js conference in London</p>
+          </li>
+          <li>
             <h3><a href='http://lnug.org/'>LNUG</a></h3>
             <p>The London Node.js User Group</p>
           </li>
