--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li>
             <h3><a href='http://greatbritishnodeconf.co.uk/'>The Great British Node Conference</a></h3>
-            <p>A single day, community focused Node.js conference in London</p>
+            <p>A single day, community focused, Node.js conference in London</p>
           </li>
           <li>
             <h3><a href='http://lnug.org/'>LNUG</a></h3>
