Added xbox controller to code section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <p>Bundler for non-ruby dependencies from homebrew</p>
           </li>
           <li>
+            <h3><a href='https://github.com/andrew/node-xbox-controller'>Xbox Controller</a></h3>
+            <p>Interface for Xbox 360 game controller into Node.js</p>
+          </li>
+          <li>
             <h3><a href='https://github.com/andrew/hipsternews'>HipsterNews</a></h3>
             <p>Rubymotion Hacker News reader</p>
           </li>
