Added some more videos

--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
         <h2>Videos</h2>
         <ul>
           <li>
+            <h3><a href='http://www.youtube.com/watch?v=1qq4c6J8lVU'>The Future of Nodecopter</a></h3>
+            <p>Recorded at LXJS in 2013</p>
+          </li>
+          <li>
+            <h3><a href='http://www.youtube.com/watch?v=bcQAdVO3N_c'>Nodecopter</a></h3>
+            <p>Recorded at Over the Air in 2013</p>
+          </li>
+          <li>
+            <h3><a href='An introduction to Rubymotion: Writing iOS apps with Ruby'>An introduction to Rubymotion: Writing iOS apps with Ruby</a></h3>
+            <p>Recorded at London Ruby User Group in 2012</p>
+          </li>
+
+          <li>
             <h3><a href='http://vimeo.com/52547197'>Integrating Node.js into your existing technology stack.</a></h3>
             <p>Recorded at London Node User Group in 2012</p>
           </li>
