Added more slidedecks

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/javascript-in-the-real-world'>JavaScript in the Real World</a></h3>
+            <p>Presented at Full Frontal in 2013</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/the-future-of-nodecopter'>The Future of Nodecopter</a></h3>
+            <p>Presented at LXJS in 2013</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/webshaped'>Turbo Charging your workflow with Node.js</a></h3>
+            <p>Presented at Webshaped in 2013</p>
+          </li>
+
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/the-meetup-organisers-field-guide'>The Meetup Organisers Field Guide</a></h3>
             <p>Presented at Bristol IT Mega Meet in 2013</p>
           </li>
