--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
           </li>
         </ul>
       </section>
+      <secction id='blogposts'>
+        <h2>Blogposts</h2>
+        <ul>
+          <li>
+            <h3><a href='http://andrew.ghost.io/hacking-lego-mindstorms-ev3-with-javascript/'>Hacking Lego Mindstorms EV3 with JavaScript</a></h3>
+            <p>Posted on 13 Nov 2013</p>
+          </li>
+          <li>
+            <h3><a href='http://andrew.ghost.io/emulating-node-js-modules-in-ruby/'>Emulating the Node.js module system in Ruby</a></h3>
+            <p>Posted on 19 Oct 2013</p>
+          </li>
+          <li>
+            <h3><a href='http://andrew.ghost.io/the-great-british-node-conference/'>The Great British Node Conf</a></h3>
+            <p>Posted on 15 Oct 2013</p>
+          </li>
+        </ul>
+      </section>
       <section id='presentations'>
         <h2>Presentations</h2>
         <ul>
