--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </li>
         </ul>
       </section>
-      <secction id='blogposts'>
+      <section id='blogposts'>
         <h2>Blogposts</h2>
         <ul>
           <li>
