Added first-pr to code section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <p>Giving back little gifts of code for Christmas</p>
           </li>
           <li>
+            <h3><a href='https://github.com/andrew/first-pr'>First Pull Request</a></h3>
+            <p>What was your first pull request?</p>
+          </li>
+          <li>
             <h3><a href='https://github.com/andrew/brewdler'>Brewdler</a></h3>
             <p>Bundler for non-ruby dependencies from homebrew</p>
           </li>
