Recorded not presented

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <ul>
           <li>
             <h3><a href='http://www.youtube.com/watch?v=C7wWakRMAUY'>JavaScript in the Real World</a></h3>
-            <p>Presented at Full Frontal in 2013</p>
+            <p>Recorded at Full Frontal in 2013</p>
           </li>
           <li>
             <h3><a href='http://www.youtube.com/watch?v=1qq4c6J8lVU'>The Future of Nodecopter</a></h3>
@@ -156,7 +156,7 @@
           </li>
           <li>
             <h3><a href='http://vimeo.com/76642005'>Turbo Charging your workflow with Node.js</a></h3>
-            <p>Presented at Webshaped in 2013</p>
+            <p>Recorded at Webshaped in 2013</p>
           </li>
           <li>
             <h3><a href='An introduction to Rubymotion: Writing iOS apps with Ruby'>An introduction to Rubymotion: Writing iOS apps with Ruby</a></h3>
