Added jQuery UK

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/hardware-hacking-with-javascript'>The Rise of JavaScript Hardware Hacking</a></h3>
+            <p>Presented at jQuery UK in 2014</p>
+          </li>
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/javascript-in-the-real-world'>JavaScript in the Real World</a></h3>
             <p>Presented at Full Frontal in 2013</p>
           </li>
@@ -142,6 +146,10 @@
       <section id='videos'>
         <h2>Videos</h2>
         <ul>
+          <li>
+            <h3><a href='http://vimeo.com/album/2912171/video/97724406'>The Rise of JavaScript Hardware Hacking</a></h3>
+            <p>Presented at jQuery UK in 2014</p>
+          </li>
           <li>
             <h3><a href='http://www.youtube.com/watch?v=C7wWakRMAUY'>JavaScript in the Real World</a></h3>
             <p>Recorded at Full Frontal in 2013</p>
