Added my HybridConf slides

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/learning-how-to-tinker'>Learning how to Tinker</a></h3>
+            <p>Presented at HybridConf in 2014</p>
+          </li>
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/hardware-hacking-with-javascript'>The Rise of JavaScript Hardware Hacking</a></h3>
             <p>Presented at jQuery UK in 2014</p>
           </li>
