--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/robotics-101'>Robotics 101</a></h3>
+            <p>Presented at Hackference in 2014</p>
+          </li>
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/learning-how-to-tinker'>Learning how to Tinker</a></h3>
             <p>Presented at HybridConf in 2014</p>
           </li>
