Add the contribulator

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <p>Giving back little gifts of code for Christmas</p>
           </li>
           <li>
+            <h3><a href='https://github.com/andrew/contribulator'>Contribulator</a></h3>
+            <p>Find open source project that are friendly and welcoming</p>
+          </li>
+          <li>
             <h3><a href='https://github.com/andrew/first-pr'>First Pull Request</a></h3>
             <p>What was your first pull request?</p>
           </li>
