Added the Bath Ruby Conference

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         <h2>Events</h2>
         <ul>
           <li>
+            <h3><a href='http://greatbritishnodeconf.co.uk/'>Bath Ruby Conference 2015</a></h3>
+            <p>The biggest Ruby confernce in the UK</p>
+          </li>
+          <li>
             <h3><a href='http://greatbritishnodeconf.co.uk/'>The Great British Node Conference</a></h3>
             <p>A single day, community focused, Node.js conference in London</p>
           </li>
