Fix bath ruby link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Events</h2>
         <ul>
           <li>
-            <h3><a href='http://greatbritishnodeconf.co.uk/'>Bath Ruby Conference 2015</a></h3>
+            <h3><a href='http://2015.bathruby.org/'>Bath Ruby Conference 2015</a></h3>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
           <li>
