Added a new project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <h3><a href='https://github.com/andrew/lanyrd'>Lanyrd</a></h3>
             <p>An unofficial wrapper around the Lanyrd API</p>
           </li>
+          <li>
+            <h3><a href='http://libraries.io'>Libraries.io</a></h3>
+            <p>Discover new modules and libraries you can use in your projects.</p>
+          </li>
         </ul>
       </section>
       <section id='events'>
