--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-265870-32', 'github.com');
+      ga('create', 'UA-265870-32', 'nesbitt.io');
       ga('send', 'pageview');
 
     </script>
