--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.1363148939.html#_=1365113007323&amp;id=twitter-widget-4&amp;lang=en&amp;preview=true&amp;screen_name=teabass&amp;show_count=false&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button twitter-follow-button" style="width: 113px; height: 20px;" title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
       </div>
 
-      <p class='about'>Andrew is a freelance software developer, based in Bath, England. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups. He also aspires to one day take over the world with a fleet of JavaScript powered quadcopters.</p>
+      <p class='about'>Andrew is a freelance software developer, based in Bath, England. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups. Andrew is a freelance software developer, based in Bath, England. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups. He is also the founder of Libaries.io, an open source discovery engine.</p>
       <section id='code'>
         <h2>Code</h2>
         <ul>
