--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>What was your first pull request?</p>
           </li>
           <li>
-            <h3><a href='https://github.com/andrew/brewdler'>Brewdler</a></h3>
+            <h3><a href='https://github.com/Homebrew/homebrew-bundle'>Homebrew Bundle</a></h3>
             <p>Bundler for non-ruby dependencies from homebrew</p>
           </li>
           <li>
