Add some open source twitter bots

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <p>Interface for Xbox 360 game controller into Node.js</p>
           </li>
           <li>
-            <h3><a href='https://github.com/andrew/hipsternews'>HipsterNews</a></h3>
-            <p>Rubymotion Hacker News reader</p>
+            <h3><a href='https://twitter.com/JustOpenSourced'>Just Open Sourced</a></h3>
+            <p>A twitter bot that tweets whenever a repo is open sourced on GitHub.</p>
           </li>
           <li>
-            <h3><a href='https://github.com/andrew/lanyrd'>Lanyrd</a></h3>
-            <p>An unofficial wrapper around the Lanyrd API</p>
+            <h3><a href='https://twitter.com/firstprbot'>First PR bot</a></h3>
+            <p>A twitter bot that tweets whenever someone opens their first pull request on GitHub.</p>
           </li>
         </ul>
       </section>
