--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <h2>Events</h2>
         <ul>
           <li>
+            <h3><a href='http://2016.bathruby.uk/'>Bath Ruby Conference 2016</a></h3>
+            <p>The biggest Ruby confernce in the UK</p>
+          </li>
+          <li>
             <h3><a href='http://2015.bathruby.org/'>Bath Ruby Conference 2015</a></h3>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
