Hide "Hire me" badge

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <a href="mailto:andrewnez@gmail.com?subject=I'd like to hire you" class='hire-me'><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="hire-me@2x.png" alt="Hire Me"></a>
+    <!--<a href="mailto:andrewnez@gmail.com?subject=I'd like to hire you" class='hire-me'><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="hire-me@2x.png" alt="Hire Me"></a>-->
     <div id="container">
       <div class='face'></div>
       <h1>Andrew Nesbitt</h1>
