Added bath elixir meetup

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         <h2>Events</h2>
         <ul>
           <li>
+            <h3><a href='http://www.meetup.com/bath-elixir/'>Bath Elixir User Group</a></h3>
+            <p>Informal monthly meetups for people interested in Elixir in and around Bath</p>
+          </li>
+          <li>
             <h3><a href='http://2016.bathruby.uk/'>Bath Ruby Conference 2016</a></h3>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
