Hide blogposts section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </li>
         </ul>
       </section>
-      <section id='blogposts'>
+      <!-- <section id='blogposts'>
         <h2>Blogposts</h2>
         <ul>
           <li>
@@ -113,7 +113,7 @@
             <p>Posted on 15 Oct 2013</p>
           </li>
         </ul>
-      </section>
+      </section> -->
       <section id='presentations'>
         <h2>Presentations</h2>
         <ul>
