Added dependency ci

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <h2>Code</h2>
         <ul>
           <li>
-            <h3><a href='http://libraries.io'>Libraries.io</a></h3>
+            <h3><a href='https://dependencyci.com'>Dependency CI</a></h3>
+            <p>Automatic compliance testing for all of the dependencies in your application.</p>
+          </li>
+          <li>
+            <h3><a href='https://libraries.io'>Libraries.io</a></h3>
             <p>Discover new modules and libraries you can use in your projects.</p>
           </li>
           <li>
