--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
         <h2>Code</h2>
         <ul>
           <li>
-            <h3><a href='https://dependencyci.com'>Dependency CI</a></h3>
-            <p>Automatic compliance testing for all of the dependencies in your application.</p>
-          </li>
-          <li>
             <h3><a href='https://libraries.io'>Libraries.io</a></h3>
             <p>Discover new modules and libraries you can use in your projects.</p>
+          </li>
+          <li>
+            <h3><a href='https://octobox.io'>Octobox</a></h3>
+            <p>Take back control of your GitHub notifications.</p>
+          </li>
+          <li>
+            <h3><a href='https://dependencyci.com'>Dependency CI</a></h3>
+            <p>Automatic compliance testing for all of the dependencies in your application.</p>
           </li>
           <li>
             <h3><a href='https://github.com/andrew/split'>Split</a></h3>
@@ -68,10 +72,6 @@
         <h2>Events</h2>
         <ul>
           <li>
-            <h3><a href='http://www.meetup.com/bath-elixir/'>Bath Elixir User Group</a></h3>
-            <p>Informal monthly meetups for people interested in Elixir in and around Bath</p>
-          </li>
-          <li>
             <h3><a href='http://2016.bathruby.uk/'>Bath Ruby Conference 2016</a></h3>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
@@ -101,23 +101,6 @@
           </li>
         </ul>
       </section>
-      <!-- <section id='blogposts'>
-        <h2>Blogposts</h2>
-        <ul>
-          <li>
-            <h3><a href='http://andrew.ghost.io/hacking-lego-mindstorms-ev3-with-javascript/'>Hacking Lego Mindstorms EV3 with JavaScript</a></h3>
-            <p>Posted on 13 Nov 2013</p>
-          </li>
-          <li>
-            <h3><a href='http://andrew.ghost.io/emulating-node-js-modules-in-ruby/'>Emulating the Node.js module system in Ruby</a></h3>
-            <p>Posted on 19 Oct 2013</p>
-          </li>
-          <li>
-            <h3><a href='http://andrew.ghost.io/the-great-british-node-conference/'>The Great British Node Conf</a></h3>
-            <p>Posted on 15 Oct 2013</p>
-          </li>
-        </ul>
-      </section> -->
       <section id='presentations'>
         <h2>Presentations</h2>
         <ul>
