Added a couple slidedecks

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
         <h2>Presentations</h2>
         <ul>
           <li>
+            <h3><a href='https://speakerdeck.com/andrew/can-my-friends-come-too'>Can my friends come too?</a></h3>
+            <p>Presented at Brighton Ruby in 2017</p>
+          </li>
+          <li>
+            <h3><a href='https://speakerdeck.com/andrew/elasticsearch-on-rails'>Elasticsearch on Rails</a></h3>
+            <p>Presented at South-West Elastic Community Meetup in 2015</p>
+          </li>
+          <li>
             <h3><a href='https://speakerdeck.com/andrew/robotics-101'>Robotics 101</a></h3>
             <p>Presented at Hackference in 2014</p>
           </li>
