Add the manifest

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
       <p class='about'>Andrew is a freelance software developer, based in Somerset, UK. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups. He is also the founder of <a href='https://dependencyci.com'>Dependency CI</a> and <a href='https://libraries.io'>Libraries.io</a></p>
       <section id='code'>
-        <h2>Code</h2>
+        <h2>Projects</h2>
         <ul>
+          <li>
+            <h3><a href='https://manifest.fm'>The Manifest</a></h3>
+            <p>A podcast all about package management, cohosted with Alex Pounds.</p>
+          </li>
           <li>
             <h3><a href='https://libraries.io'>Libraries.io</a></h3>
             <p>Discover new modules and libraries you can use in your projects.</p>
