--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
         <h2>Videos</h2>
         <ul>
           <li>
+            <h3><a href='https://brightonruby.com/2017/can-my-friends-come-too-andrew-nesbitt/'>Can my friends come too?</a></h3>
+            <p>Presented at Brighton Ruby in 2017</p>
+          </li>
+          <li>
             <h3><a href='http://vimeo.com/album/2912171/video/97724406'>The Rise of JavaScript Hardware Hacking</a></h3>
             <p>Presented at jQuery UK in 2014</p>
           </li>
