--- a/index.html
+++ b/index.html
@@ -7,221 +7,257 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href='style.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
-    <!--<a href="mailto:andrewnez@gmail.com?subject=I'd like to hire you" class='hire-me'><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="hire-me@2x.png" alt="Hire Me"></a>-->
-    <div id="container">
-      <div class='face'></div>
-      <h1>Andrew Nesbitt</h1>
-      <div class='social'>
-        <iframe src="http://ghbtns.com/github-btn.html?user=andrew&amp;type=follow&amp;count=false" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
-        <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.1363148939.html#_=1365113007323&amp;id=twitter-widget-4&amp;lang=en&amp;preview=true&amp;screen_name=teabass&amp;show_count=false&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button twitter-follow-button" style="width: 113px; height: 20px;" title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
+    <div class="container">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg w-100">
+          <span class="navbar-brand face"></span>
+          <span class="navbar-brand mb-0 h1">Andrew Nesbitt</span>
+
+          <ul class="navbar-nav nav ml-auto">
+            <li class="nav-item">
+              <a href="https://twitter.com/teabass"><i class="fa fa-twitter"></i></a>&nbsp;
+              <a href="https://github.com/andrew"><i class="fa fa-github"></i></a>
+            </li>
+            <li class="navbar-item">
+
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          Andrew is a software developer, based in Somerset, UK. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups.
+        </div>
+      </div>
+      <hr>
+      <h3>Projects</h3>
+      <div class="row">
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/librariesio.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Libraries.io</h5>
+            Discover new modules and libraries you can use in your projects.
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/octobox.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Octobox</h5>
+            Take back control of your GitHub notifications.
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/24pullrequests.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">24 Pull Requests</h5>
+            Giving back little gifts of code for Christmas.
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/themanifest.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Manifest Podcast</h5>
+            A podcast all about package management, cohosted with Alex Pounds.
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Dependency CI</h5>
+            Automatic compliance testing for all of the dependencies in your application.
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/splitrb.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Split</h5>
+            The Rack Based AB testing framework
+          </div>
+        </div>
       </div>
 
-      <p class='about'>Andrew is a freelance software developer, based in Somerset, UK. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups. He is also the founder of <a href='https://dependencyci.com'>Dependency CI</a> and <a href='https://libraries.io'>Libraries.io</a></p>
       <section id='code'>
-        <h2>Projects</h2>
+        <h3>More Projects</h3>
         <ul>
           <li>
-            <h3><a href='https://manifest.fm'>The Manifest</a></h3>
-            <p>A podcast all about package management, cohosted with Alex Pounds.</p>
-          </li>
-          <li>
-            <h3><a href='https://libraries.io'>Libraries.io</a></h3>
-            <p>Discover new modules and libraries you can use in your projects.</p>
-          </li>
-          <li>
-            <h3><a href='https://octobox.io'>Octobox</a></h3>
-            <p>Take back control of your GitHub notifications.</p>
-          </li>
-          <li>
-            <h3><a href='https://dependencyci.com'>Dependency CI</a></h3>
-            <p>Automatic compliance testing for all of the dependencies in your application.</p>
-          </li>
-          <li>
-            <h3><a href='https://github.com/andrew/split'>Split</a></h3>
-            <p>The Rack Based AB testing framework</p>
-          </li>
-          <li>
-            <h3><a href='https://github.com/sass/node-sass'>node-sass</a></h3>
+            <h4><a href='https://github.com/sass/node-sass'>node-sass</a></h4>
             <p>Node.js bindings to libsass</p>
           </li>
           <li>
-            <h3><a href='https://github.com/24pullrequests/24pullrequests'>24pullrequests</a></h3>
-            <p>Giving back little gifts of code for Christmas</p>
-          </li>
-          <li>
-            <h3><a href='https://github.com/andrew/contribulator'>Contribulator</a></h3>
+            <h4><a href='https://github.com/andrew/contribulator'>Contribulator</a></h4>
             <p>Find open source project that are friendly and welcoming</p>
           </li>
           <li>
-            <h3><a href='https://github.com/andrew/first-pr'>First Pull Request</a></h3>
+            <h4><a href='https://github.com/andrew/first-pr'>First Pull Request</a></h4>
             <p>What was your first pull request?</p>
           </li>
           <li>
-            <h3><a href='https://github.com/Homebrew/homebrew-bundle'>Homebrew Bundle</a></h3>
+            <h4><a href='https://github.com/Homebrew/homebrew-bundle'>Homebrew Bundle</a></h4>
             <p>Bundler for non-ruby dependencies from homebrew</p>
           </li>
           <li>
-            <h3><a href='https://github.com/andrew/node-xbox-controller'>Xbox Controller</a></h3>
+            <h4><a href='https://github.com/andrew/node-xbox-controller'>Xbox Controller</a></h4>
             <p>Interface for Xbox 360 game controller into Node.js</p>
           </li>
           <li>
-            <h3><a href='https://twitter.com/JustOpenSourced'>Just Open Sourced</a></h3>
+            <h4><a href='https://twitter.com/JustOpenSourced'>Just Open Sourced</a></h4>
             <p>A twitter bot that tweets whenever a repo is open sourced on GitHub.</p>
           </li>
         </ul>
       </section>
       <section id='events'>
-        <h2>Events</h2>
+        <h3>Events</h3>
         <ul>
           <li>
-            <h3><a href='http://2016.bathruby.uk/'>Bath Ruby Conference 2016</a></h3>
+            <h4><a href='http://2016.bathruby.uk/'>Bath Ruby Conference 2016</a></h4>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
           <li>
-            <h3><a href='http://2015.bathruby.org/'>Bath Ruby Conference 2015</a></h3>
+            <h4><a href='http://2015.bathruby.org/'>Bath Ruby Conference 2015</a></h4>
             <p>The biggest Ruby confernce in the UK</p>
           </li>
           <li>
-            <h3><a href='http://www.meetup.com/bathruby/'>Bath Ruby User Group</a></h3>
+            <h4><a href='http://www.meetup.com/bathruby/'>Bath Ruby User Group</a></h4>
             <p>Informal monthly meetups for Rubyists in and around Bath</p>
           </li>
           <li>
-            <h3><a href='http://greatbritishnodeconf.co.uk/'>The Great British Node Conference</a></h3>
+            <h4><a href='http://greatbritishnodeconf.co.uk/'>The Great British Node Conference</a></h4>
             <p>A single day, community focused, Node.js conference in London</p>
           </li>
           <li>
-            <h3><a href='http://lnug.org/'>LNUG</a></h3>
+            <h4><a href='http://lnug.org/'>LNUG</a></h4>
             <p>The London Node.js User Group</p>
           </li>
           <li>
-            <h3><a href='http://nodecopter.com/'>Nodecopter</a></h3>
+            <h4><a href='http://nodecopter.com/'>Nodecopter</a></h4>
             <p>Bringing flying robot hackdays to the UK</p>
           </li>
           <li>
-            <h3><a href='http://railsgirls.com/'>RailsGirls</a></h3>
+            <h4><a href='http://railsgirls.com/'>RailsGirls</a></h4>
             <p>Helping teach women programming and rails around the UK</p>
           </li>
         </ul>
       </section>
       <section id='presentations'>
-        <h2>Presentations</h2>
+        <h3>Presentations</h3>
         <ul>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/can-my-friends-come-too'>Can my friends come too?</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/can-my-friends-come-too'>Can my friends come too?</a></h4>
             <p>Presented at Brighton Ruby in 2017</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/elasticsearch-on-rails'>Elasticsearch on Rails</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/elasticsearch-on-rails'>Elasticsearch on Rails</a></h4>
             <p>Presented at South-West Elastic Community Meetup in 2015</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/robotics-101'>Robotics 101</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/robotics-101'>Robotics 101</a></h4>
             <p>Presented at Hackference in 2014</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/learning-how-to-tinker'>Learning how to Tinker</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/learning-how-to-tinker'>Learning how to Tinker</a></h4>
             <p>Presented at HybridConf in 2014</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/hardware-hacking-with-javascript'>The Rise of JavaScript Hardware Hacking</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/hardware-hacking-with-javascript'>The Rise of JavaScript Hardware Hacking</a></h4>
             <p>Presented at jQuery UK in 2014</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/javascript-in-the-real-world'>JavaScript in the Real World</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/javascript-in-the-real-world'>JavaScript in the Real World</a></h4>
             <p>Presented at Full Frontal in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/the-future-of-nodecopter'>The Future of Nodecopter</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/the-future-of-nodecopter'>The Future of Nodecopter</a></h4>
             <p>Presented at LXJS in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/webshaped'>Turbo Charging your workflow with Node.js</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/webshaped'>Turbo Charging your workflow with Node.js</a></h4>
             <p>Presented at Webshaped in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/the-meetup-organisers-field-guide'>The Meetup Organisers Field Guide</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/the-meetup-organisers-field-guide'>The Meetup Organisers Field Guide</a></h4>
             <p>Presented at Bristol IT Mega Meet in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/nodecopter-cheltenham-geek-nights'>Node.js + Quadcopters, what could go wrong?</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/nodecopter-cheltenham-geek-nights'>Node.js + Quadcopters, what could go wrong?</a></h4>
             <p>Presented at Cheltenham Geek Nights in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h4>
             <p>Presented at the London, Bristol and Cardiff Ruby User Groups about Rubymotion in 2013</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/integrating-node-dot-js'>Integrating Node.js into an existing stack</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/integrating-node-dot-js'>Integrating Node.js into an existing stack</a></h4>
             <p>Presented at the Italian Node.js Conference in 2012</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/em-vs-node'>Event Machine vs Node.js</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/em-vs-node'>Event Machine vs Node.js</a></h4>
             <p>Presented at Ruby Manor in 2011</p>
           </li>
           <li>
-            <h3><a href='https://speakerdeck.com/andrew/b-testing-everything-with-split'>A/B Testing everything with Split</a></h3>
+            <h4><a href='https://speakerdeck.com/andrew/b-testing-everything-with-split'>A/B Testing everything with Split</a></h4>
             <p>Presented at Arrrrcamp in 2011</p>
           </li>
         </ul>
       </section>
       <section id='videos'>
-        <h2>Videos</h2>
+        <h3>Videos</h3>
         <ul>
           <li>
-            <h3><a href='https://brightonruby.com/2017/can-my-friends-come-too-andrew-nesbitt/'>Can my friends come too?</a></h3>
+            <h4><a href='https://brightonruby.com/2017/can-my-friends-come-too-andrew-nesbitt/'>Can my friends come too?</a></h4>
             <p>Presented at Brighton Ruby in 2017</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/album/2912171/video/97724406'>The Rise of JavaScript Hardware Hacking</a></h3>
+            <h4><a href='http://vimeo.com/album/2912171/video/97724406'>The Rise of JavaScript Hardware Hacking</a></h4>
             <p>Presented at jQuery UK in 2014</p>
           </li>
           <li>
-            <h3><a href='http://www.youtube.com/watch?v=C7wWakRMAUY'>JavaScript in the Real World</a></h3>
+            <h4><a href='http://www.youtube.com/watch?v=C7wWakRMAUY'>JavaScript in the Real World</a></h4>
             <p>Recorded at Full Frontal in 2013</p>
           </li>
           <li>
-            <h3><a href='http://www.youtube.com/watch?v=1qq4c6J8lVU'>The Future of Nodecopter</a></h3>
+            <h4><a href='http://www.youtube.com/watch?v=1qq4c6J8lVU'>The Future of Nodecopter</a></h4>
             <p>Recorded at LXJS in 2013</p>
           </li>
           <li>
-            <h3><a href='http://www.youtube.com/watch?v=bcQAdVO3N_c'>Nodecopter</a></h3>
+            <h4><a href='http://www.youtube.com/watch?v=bcQAdVO3N_c'>Nodecopter</a></h4>
             <p>Recorded at Over the Air in 2013</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/76642005'>Turbo Charging your workflow with Node.js</a></h3>
+            <h4><a href='http://vimeo.com/76642005'>Turbo Charging your workflow with Node.js</a></h4>
             <p>Recorded at Webshaped in 2013</p>
           </li>
           <li>
-            <h3><a href='http://skillsmatter.com/podcast/ajax-ria/an-introduction-to-rubymotion-writing-ios-apps-with-ruby'>An introduction to Rubymotion: Writing iOS apps with Ruby</a></h3>
+            <h4><a href='http://skillsmatter.com/podcast/ajax-ria/an-introduction-to-rubymotion-writing-ios-apps-with-ruby'>An introduction to Rubymotion: Writing iOS apps with Ruby</a></h4>
             <p>Recorded at London Ruby User Group in 2012</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/52547197'>Integrating Node.js into your existing technology stack.</a></h3>
+            <h4><a href='http://vimeo.com/52547197'>Integrating Node.js into your existing technology stack.</a></h4>
             <p>Recorded at London Node User Group in 2012</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/41141012'>Using Node.js and Ruby on Rails for uber productivity</a></h3>
+            <h4><a href='http://vimeo.com/41141012'>Using Node.js and Ruby on Rails for uber productivity</a></h4>
             <p>Recorded at London Node User Group in 2012</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/32617520'>Form Analytics With inForm</a></h3>
+            <h4><a href='http://vimeo.com/32617520'>Form Analytics With inForm</a></h4>
             <p>Recorded at HN London in 2011</p>
           </li>
           <li>
-            <h3><a href='http://www.youtube.com/watch?v=U7dbQ4cIe34'>Event Machine vs Node.js</a></h3>
+            <h4><a href='http://www.youtube.com/watch?v=U7dbQ4cIe34'>Event Machine vs Node.js</a></h4>
             <p>Recorded at Ruby Manor in 2011</p>
           </li>
           <li>
-            <h3><a href='http://vimeo.com/30586648'>A/B Testing everything with Split</a></h3>
+            <h4><a href='http://vimeo.com/30586648'>A/B Testing everything with Split</a></h4>
             <p>Recorded at Arrrrcamp in 2011</p>
           </li>
         </ul>
       </section>
-      <footer>
-        Hosted on <a href='http://pages.github.com/'>GitHub Pages</a>
-      </footer>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
