Link featured projects

--- a/index.html
+++ b/index.html
@@ -37,46 +37,46 @@
       <h3>Projects</h3>
       <div class="row">
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/librariesio.png" width="60px">
+          <a href="https://libraries.io"><img class="mr-3" src="https://github.com/librariesio.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">Libraries.io</h5>
+            <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
             Discover new modules and libraries you can use in your projects.
           </div>
         </div>
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/octobox.png" width="60px">
+          <a href="https://octobox.io"><img class="mr-3" src="https://github.com/octobox.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">Octobox</h5>
+            <h5 class="mt-0"><a href="https://octobox.io">Octobox</a></h5>
             Take back control of your GitHub notifications.
           </div>
         </div>
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/24pullrequests.png" width="60px">
+          <a href="https://24pullrequests.com"><img class="mr-3" src="https://github.com/24pullrequests.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">24 Pull Requests</h5>
+            <h5 class="mt-0"><a href="https://24pullrequests.com">24 Pull Requests</a></h5>
             Giving back little gifts of code for Christmas.
           </div>
         </div>
       </div>
       <div class="row">
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/themanifest.png" width="60px">
+          <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/themanifest.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">Manifest Podcast</h5>
+            <h5 class="mt-0"><a href="https://manifest.fm">Manifest Podcast</a></h5>
             A podcast all about package management, cohosted with Alex Pounds.
           </div>
         </div>
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
+          <a href="https://dependencyci.com"><img class="mr-3" src="https://github.com/dependencyci.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">Dependency CI</h5>
+            <h5 class="mt-0"><a href="https://dependencyci.com">Dependency CI</a></h5>
             Automatic compliance testing for all of the dependencies in your application.
           </div>
         </div>
         <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/splitrb.png" width="60px">
+          <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/splitrb.png" width="60px"></a>
           <div class="media-body">
-            <h5 class="mt-0">Split</h5>
+            <h5 class="mt-0"><a href="https://github.com/splitrb/split">Split</a></h5>
             The Rack Based AB testing framework
           </div>
         </div>
