--- a/index.html
+++ b/index.html
@@ -37,13 +37,6 @@
       <h3>Projects</h3>
       <div class="row">
         <div class="media col-lg-4">
-          <a href="https://libraries.io"><img class="mr-3" src="https://github.com/librariesio.png" width="60px"></a>
-          <div class="media-body">
-            <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
-            Discover new modules and libraries you can use in your projects.
-          </div>
-        </div>
-        <div class="media col-lg-4">
           <a href="https://octobox.io"><img class="mr-3" src="https://github.com/octobox.png" width="60px"></a>
           <div class="media-body">
             <h5 class="mt-0"><a href="https://octobox.io">Octobox</a></h5>
@@ -54,11 +47,9 @@
           <a href="https://24pullrequests.com"><img class="mr-3" src="https://github.com/24pullrequests.png" width="60px"></a>
           <div class="media-body">
             <h5 class="mt-0"><a href="https://24pullrequests.com">24 Pull Requests</a></h5>
-            Giving back little gifts of code for Christmas.
+            Giving back to open source for the holidays.
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="media col-lg-4">
           <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/themanifest.png" width="60px"></a>
           <div class="media-body">
@@ -66,18 +57,27 @@
             A podcast all about package management, cohosted with Alex Pounds.
           </div>
         </div>
-        <div class="media col-lg-4">
-          <a href="https://dependencyci.com"><img class="mr-3" src="https://github.com/dependencyci.png" width="60px"></a>
-          <div class="media-body">
-            <h5 class="mt-0"><a href="https://dependencyci.com">Dependency CI</a></h5>
-            Automatic compliance testing for all of the dependencies in your application.
-          </div>
-        </div>
+      </div>
+      <div class="row">
         <div class="media col-lg-4">
           <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/splitrb.png" width="60px"></a>
           <div class="media-body">
             <h5 class="mt-0"><a href="https://github.com/splitrb/split">Split</a></h5>
             The Rack Based AB testing framework
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <a href="https://libraries.io"><img class="mr-3" src="https://github.com/librariesio.png" width="60px"></a>
+          <div class="media-body">
+            <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
+            Discover new modules and libraries you can use in your projects.
+          </div>
+        </div>
+        <div class="media col-lg-4">
+          <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
+          <div class="media-body">
+            <h5 class="mt-0">Dependency CI</h5>
+            Automatic compliance testing for all of the dependencies in your application.
           </div>
         </div>
       </div>
