--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,13 @@
       <h3>Projects</h3>
       <div class="row">
         <div class="media col-lg-4">
+          <a href="https://pod.casts.io"><img class="mr-3" src="https://github.com/podcastsio.png" width="60px"></a>
+          <div class="media-body">
+            <h5 class="mt-0"><a href="https://pod.casts.io">Pod.casts</a></h5>
+            The ultimate podcast discovery service.
+          </div>
+        </div>
+        <div class="media col-lg-4">
           <a href="https://octobox.io"><img class="mr-3" src="https://github.com/octobox.png" width="60px"></a>
           <div class="media-body">
             <h5 class="mt-0"><a href="https://octobox.io">Octobox</a></h5>
@@ -50,6 +57,8 @@
             Giving back to open source for the holidays.
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="media col-lg-4">
           <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/themanifest.png" width="60px"></a>
           <div class="media-body">
@@ -57,8 +66,6 @@
             A podcast all about package management, cohosted with Alex Pounds.
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="media col-lg-4">
           <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/splitrb.png" width="60px"></a>
           <div class="media-body">
@@ -71,13 +78,6 @@
           <div class="media-body">
             <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
             Discover new modules and libraries you can use in your projects.
-          </div>
-        </div>
-        <div class="media col-lg-4">
-          <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
-          <div class="media-body">
-            <h5 class="mt-0">Dependency CI</h5>
-            Automatic compliance testing for all of the dependencies in your application.
           </div>
         </div>
       </div>
