Update personal description

--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          Andrew is a software developer, based in Somerset, UK. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups.
+          Andrew is a UK-based software engineer focused on Ruby, open source, and building up local dev communities. He runs Ecosyste.ms, a project that helps people discover and support the most important open-source projects by mapping dependencies and digging into public data.
         </div>
       </div>
       <hr>
